force-app/main/default/objects/yearly_income__c/yearly_income__c.object-meta.xml
<CustomObject>
    <label>yearly income</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>yearly income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>yearly incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>