force-app/main/default/objects/yearly_income__c/fields/gross_income__c.field-meta.xml
<CustomField>
    <fullName>gross_income__c</fullName>
    <formula>taxable_income__c +  non_taxable_allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>gross income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>