force-app/main/default/objects/yearly_income__c/fields/income_tax__c.field-meta.xml
<CustomField>
    <fullName>income_tax__c</fullName>
    <label>income tax</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>