force-app/main/default/objects/yearly_income__c/fields/non_taxable_allowance__c.field-meta.xml
<CustomField>
    <fullName>non_taxable_allowance__c</fullName>
    <label>non taxable allowance</label>
    <summarizedField>monthly_income__c.non_taxable_allowance__c</summarizedField>
    <summaryForeignKey>monthly_income__c.year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>