force-app/main/default/objects/yearly_income__c/fields/taxable_income__c.field-meta.xml
<CustomField>
    <fullName>taxable_income__c</fullName>
    <label>taxable income</label>
    <summarizedField>monthly_income__c.basic_income__c</summarizedField>
    <summaryForeignKey>monthly_income__c.year__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>